# esp32_hexastorm

./: .gitattributes  .gitignore  .gitmodules  README.md  boot.py  bootlib.py  constants.py  developer.md  environ.sh  install.sh  jsconfig.json  machine.py  micropython.cmake  partitions-4MiB.csv  pyproject.toml  readme.md  utility.py  webapp.py
TMCStepper/: README.md  examplemodule.c  micropython.cmake  micropython.mk  steppers.cpp  steppersmodule.c  steppersmodule.h
fomuflash/: README.md  ice40.c  pythonwrap.c  spi.c
microdot/: __init__.py  asgi.py  microdot.py  session.py  sse.py  test_client.py  utemplate.py  websocket.py  wsgi.py
modules/: boot.py  bootlib.py
releases/: version.json
sdcard/: secrets.py
src/: boot.py  build.py  machine.py  main.py  manifest.py  micropython.cmake  rest.py  steppers.py  tools.py  ulab.py
src/control/: bootlib.py  constants.py  laserhead.py  microdot.py  reloading.py  unittest_runner.py  webapp.py
src/control/laserhead/: __init__.py  base.py  micropython.py
src/esp32_hexastorm/: rest.py
src/microdot/: __init__.py  asgi.py  cors.py  helpers.py  jinja.py  login.py  microdot.py  multipart.py  session.py  sse.py  test_client.py  utemplate.py  websocket.py  wsgi.py
src/mrequests/: urequests.py
src/root/: config.json
src/test/: test_hardware.py  test_hexastorm.py
src/tests/: flashtest.py  raw_fpgatest.py  raw_tmctest.py  steppertest.py  test_camera.py  test_stepper.py  test_webserver.py  tmc_driver_test.py
src/tmc/: TMC_2209_StepperDriver.py  TMC_2209_uart.py  reg.py  stepperdriver.py  uart.py
src/utemplate/: compiled.py  recompile.py  source.py
src/winbond/: winbond.py
static/: home.js
temp/: test.py
templates/: XYmovement.html  Zmovement.html  base_footer.html  base_header.html  fileactions.html  general.html  home.html  laserhead.html  login.html  nav_bar.html  printingstate.html  settings.html  steps.html  tableintable.html
test/: test_hexastorm.py
tests/: hardware_test.py  test_webserver.py
utemplate/: recompile.py  source.py
(+23 files in other folders)
