[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esp32-hexastorm"
version = "0.1.0"
description = "ESP32 wrapper for Hexastorm python library"
authors = [
    { name = "Rik Starmans", email = "hstarmans@hexastorm.com" }
]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "freezefs>=2.4",
    "numpy>=2.2.4",
    "pyclean>=3.1.0",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "sseclient-py>=1.8.0",
    "websocket-client>=1.8.0",
]

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79

[dependency-groups]
dev = [
    "black>=25.1.0",
    "nbqa>=1.9.1",
    "ruff>=0.11.5",
]
